--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "dns-updater.js",
   "dependencies": {
+    "@sendgrid/mail": "^6.5.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "freenom-dns": "^0.9.4",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^5.1.1",
     "public-ip": "^3.0.0"
   },
