--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "express": "^4.16.4",
     "freenom-dns": "^0.9.4",
     "node-cron": "^2.0.3",
-    "nodemailer": "^5.1.1",
-    "public-ip": "^3.0.0"
+    "nodemailer": "^5.1.1"
   },
   "devDependencies": {},
   "scripts": {
